[project]
dependencies = []
description = "Add a short description here"
name = "lightglue-glomap"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lightglue_glomap*"]

[tool.pixi.project]
channels = ["nvidia", "nvidia/label/cuda-11.8.0", "conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
libc = { family = "glibc", version = "2.31" }
cuda = "11.8"

[tool.pixi.pypi-dependencies]
lightglue-glomap = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.11.*"
pytorch = { version = "2.3.1", channel = "pytorch" }
torchvision = { version = "0.18.1", channel = "pytorch" }
cuda = { version = "*", channel = "nvidia/label/cuda-11.8.0" }
pytorch-cuda = { version = "11.8.*", channel = "pytorch" }
glomap = ">=1.0.0,<2"
hloc = ">=1.4,<2"
colmap = ">=3.8,<4"
icecream = ">=2.1.3,<3"
rich = ">=13.8.1,<14"
appdirs = ">=1.4.4,<2"
tyro = ">=0.8.10,<0.9"
gradio = ">=4.44.0,<5"
rerun-sdk = ">=0.18.2,<0.19"

[tool.pixi.tasks.reconstruct]
cmd = """
    python tools/reconstruct.py
    """
description = "Reconstruct the scene using LightGlue and Glomap."

[tool.pixi.feature.nerfstudio.dependencies]
python = "3.11.*"

[tool.pixi.feature.nerfstudio.pypi-dependencies]
open3d = ">=0.18.0,<0.19"
nerfstudio = ">=1.1.4,<2"


[tool.pixi.feature.nerfstudio.tasks.video-processing]
cmd = """
    ns-process-data video --num-downscales 0 --skip-colmap
    """
description = "Perform video processing on the dataset."


[tool.pixi.environments]
# Create a custom environment which only has the `lint` feature (numpy isn't part of that env).
nerfstudio = { features = ["nerfstudio"], no-default-feature = true }
